refactor(service): refactor in WFS worker